fix DataBaseConnection